buildscript {
    repositories {
        mavenCentral()
        jcenter()
    }
    dependencies {
        classpath "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.8'
        // classpath 'edu.sc.seis.macAppBundle:gradle-macappbundle:2.3.0'  // macAppBundle temporarily disabled
    }
}

plugins {
    id 'org.jetbrains.kotlin.jvm' version '1.9.23'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'java'
    id 'application'
    id 'idea'
    id "com.peterabeles.gversion" version "1.5.0"
    id "com.google.protobuf" version "0.9.4"
}

// apply plugin: 'edu.sc.seis.macAppBundle'  // macAppBundle temporarily disabled


group = 'com.symmetrylabs'
version = '1.0.5'
sourceCompatibility = 1.8
mainClassName = 'com.symmetrylabs.slstudio.SLStudio'

ext {
    protocVersion = '3.24.4'
    grpcVersion = '1.59.0'
}

allprojects {
    repositories {
        mavenCentral()
        maven {
            url 'https://jitpack.io'
            credentials {
                username 'jp_ad5p43bkk3kiaah4slmihuagci'
            }
        }
    }
    tasks.withType(JavaCompile) {
        sourceCompatibility = '1.8'
    }
}

repositories {
    mavenCentral()
    // needed for aparapi dependency
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
}

dependencies {
    implementation "com.aparapi:aparapi-jni:1.1.3-20180211.063116-7"
    implementation 'org.json:json:20231013'
    implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
    implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
    implementation 'com.fazecast:jSerialComm:[2.0.0,3.0.0)'
    implementation 'com.github.SymmetryLabs:ArtNetStack:44ddfed'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
    implementation group: 'com.google.guava', name: 'guava', version: '23.5-jre'
    implementation group: 'com.harium', name: 'kdtree', version: '1.0.0'
    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
    implementation group: 'de.javagl', name: 'obj', version: '0.3.0'
    implementation group: 'io.github.lukehutch', name: 'fast-classpath-scanner', version: '2.9.3'
    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.3'
    implementation group: 'org.javassist', name: 'javassist', version: '3.22.0-GA'
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.9.23'
    // Processing 4.x and OpenGL dependencies (local jars, Java 17+)
    implementation files('libs/core-4.4.1.jar')
    implementation files('libs/jogl-all-2.5.0.jar')
    implementation files('libs/jogl-all-2.5.0-natives-macosx-universal.jar')
    implementation files('libs/gluegen-rt-2.5.0.jar')
    implementation files('libs/gluegen-rt-2.5.0-natives-macosx-universal.jar')
    // implementation files('libs/minim.jar') // Uncomment only if still needed for audio
    implementation group: 'uk.co.caprica', name: 'vlcj', version: '3.10.1'
    implementation group: 'uk.co.xfactory-librarians', name: 'coremidi4j', version: '0.9'
    implementation group: 'org.smurn', name: 'jply', version: '0.2.0'
    implementation group: 'joda-time', name: 'joda-time', version: '2.10.1'
    implementation group: 'com.google.protobuf', name: 'protobuf-java', version: protocVersion
    implementation group: 'io.grpc', name: 'grpc-protobuf', version: grpcVersion
    implementation group: 'io.grpc', name: 'grpc-stub', version: grpcVersion
    runtimeOnly group: 'io.grpc', name: 'grpc-netty-shaded', version: grpcVersion
    implementation group: 'io.netty', name: 'netty-all', version: '4.1.36.Final'

    // Processing Video and Minim libraries (local jars)
    implementation files('libs/video.jar')
    implementation files('libs/minim.jar')

    implementation files('libs/aparapi-b6fffad.jar')

    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.1'
    testImplementation 'junit:junit:4.12'

    implementation 'org.glassfish:javax.annotation:10.0-b28'
}

compileKotlin {
    kotlinOptions.jvmTarget = "1.8"
}

compileTestKotlin {
    kotlinOptions.jvmTarget = "1.8"
}

run {
    // Ensure OpenGL window works on macOS
    // jvmArgs '-XstartOnFirstThread' (REMOVED: keep only in runMinimalTest)
    mainClassName = rootProject.mainClassName

    if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
        jvmArgs '-XX:+UseParNewGC', '-XX:+UseConcMarkSweepGC'
        jvmArgs '-Xmx1024M'
    }

    if (System.properties["os.name"] == "Mac OS X") {
        // jvmArgs '-XstartOnFirstThread' (REMOVED: keep only in runMinimalTest)
        // jvmArgs '-Djava.library.path=/Applications/Processing.app/Contents/Java/core/library/macos-x86_64' (REMOVED: not needed for Processing 3.x, and directory does not exist)
        systemProperty 'java.awt.headless', false
    }

    // To select a layout from the command line, "gradlew run -Playout=cubes"
    systemProperty 'com.symmetrylabs.layout', findProperty('layout')
    systemProperty 'com.symmetrylabs.app', 'slstudio'

    doLast {
        while (file(".restart").exists()) {
            file(".restart").delete()
            println 'Restarting...'
            run.exec()
        }
    }
}

test {
    testLogging {
        // configure test logging if needed
    }
}

task runMinimalTest(type: JavaExec) {
    description = 'Run the MinimalTest Processing sketch with -XstartOnFirstThread for macOS OpenGL window debugging.'
    main = 'com.symmetrylabs.slstudio.MinimalTest'
    classpath = sourceSets.main.runtimeClasspath
    jvmArgs = ['-XstartOnFirstThread', '-Dprism.order=sw', '-Dprism.verbose=true']
    systemProperty 'java.awt.headless', false
}

// macAppBundle {
//     mainClassName = rootProject.mainClassName
//     icon = "src/main/resources/application.icns"
//     bundleJRE = true
//     javaProperties.put("apple.laf.useScreenMenuBar", "true")
//     jarTask = "shadowJar"
//     javaExtras.put("-XX:+UseParNewGC", null)
//     javaExtras.put("-XX:+UseConcMarkSweepGC", null)
// }

task genPrebuiltSlimgui(type: Copy) {
    description = "builds and copies slimgui library into the libs prebuilt library folder"
    dependsOn ":slimgui:assembleRelease"
    from("slimgui/build/lib/main/release") {
        include "*.dylib"
        include "*.so"
        include "*.dll"
        include "*.lib"
    }
    into "libs"
}

task buildAndRunUIv2(type: JavaExec) {
    dependsOn 'genPrebuiltSlimgui', 'runUIv2'
}

task runUIv2(type: JavaExec) {
    if (System.properties["os.name"] == "Mac OS X") {
        // jvmArgs '-XstartOnFirstThread' (REMOVED: keep only in runMinimalTest)
        systemProperty 'java.awt.headless', false
    }
    main = rootProject.mainClassName
    systemProperty 'org.lwjgl.util.Debug', false
    systemProperty 'java.library.path', 'libs'
    systemProperty 'com.symmetrylabs.app', 'volume'
    classpath = run.classpath
}

runUIv2.mustRunAfter genPrebuiltSlimgui

task runServer(type: JavaExec) {
    systemProperty 'com.symmetrylabs.app', 'server'
    main = rootProject.mainClassName
    classpath = run.classpath
}

task genUiHeader(type: Exec) {
    description = "generates the JNI header file for the UI class wrapper around slimgui"
    commandLine "javac", "-h", "slimgui/src/main/cpp/", "src/main/java/com/symmetrylabs/slstudio/ui/v2/UI.java"
}

shadowJar {
    archiveClassifier.set("all")
}

task dist(type: Zip) {
    dependsOn shadowJar
    from(".") {
        include 'libs/**', 'shows/**', 'data/**', 'src/main/resources/**'
        from("scripts") {
            include 'SLStudio.bat', 'SLStudio.sh', 'Volume.bat', 'Volume.sh', 'VolumeServer.sh', 'VolumeServer.service'
            filter { line -> line.replace('$VERSION', project.version) }
        }
    }
    from(shadowJar)
    into "SLStudio-${project.version}"
}

tasks.withType(Javadoc) {
    options.links "https://docs.oracle.com/javase/8/docs/api/"
}

gversion {
    srcDir = "src/main/java/"
    classPackage = "com.symmetrylabs.slstudio"
    className = "Version"
}

project.compileJava.dependsOn createVersionFile

protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:${protocVersion}"
    }
    plugins {
        grpc {
            artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
        }
    }
    generateProtoTasks {
        all().each { task ->
            task.plugins {
                grpc {}
            }
        }
    }
}
